# CentaurWorkspace

./: .centaurpackignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  crewai-hello-world.txt  pyproject.toml  pytest.ini  test_code_writing_tool_manual.py  workflow.md  workspace.cpk
centaur_workspace/: config_loader.py  crew.py  main.py
centaur_workspace/config/agents/: bob.yaml  entrepreneur.yaml  product_manager.yaml  tester_gpt35.yaml  tester_gpt4.yaml
centaur_workspace/llm_providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
centaur_workspace/tools/: code_writing_tool.py  custom_tool.py  google_drive_tool.py  timestamp_tool.py
centaur_workspace/tools/google_drive/: __init__.py  base.py  create.py  navigate.py  read.py  write.py
db/: chroma.sqlite3
scripts/manual_tests/: auth_google.py
src/centaur_workspace/: __init__.py  crew.py  main.py
src/centaur_workspace/tools/: __init__.py  code_writing_tool.py  google_drive_tool.py
src/my_crewai_project/: crew.py  main.py
src/my_crewai_project/config/: agents.yaml  tasks.yaml
src/my_crewai_project/tools/: custom_tool.py
tests/: conftest.py
tests/integration/: test_anthropic_provider_integration.py  test_code_writing_tool_integration.py  test_google_drive_create_integration.py  test_google_drive_navigate_integration.py  test_google_drive_read_integration.py  test_google_drive_tool_integration.py  test_google_drive_write_integration.py
tests/manual/: manual_code_writing_tool.py  manual_google_drive_write.py  manual_run_google_drive.py
tests/unit/: __init__.py  test_anthropic_provider.py  test_code_writing_tool.py  test_crew.py  test_custom_tool.py  test_google_drive_create.py  test_google_drive_navigate.py  test_google_drive_tool_unit.py  test_google_drive_write.py  test_llm_providers.py  test_time_stamp_tool.py
tests/validated_learning/ab_tests/: learning_coder_qulity.py
