[tool.poetry]
name = "centaur_workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "centaur_workspace", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.36.1"
crewai_tools = "^0.4.8"
openai = "^1.35.14"
pyyaml = "^6.0"
python-dotenv = "^1.0.1"
pysbd = "^0.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.0.0"
pre-commit = "^2.21.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.8"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
